[gd_scene load_steps=29 format=3 uid="uid://bg77gjdjv3o56"]

[ext_resource type="Script" path="res://Scenes/npc.gd" id="1_a1xwy"]
[ext_resource type="Texture2D" uid="uid://deakjp4t0n86v" path="res://Assets/mystic_woods_free_2.2/sprites/characters/player.png" id="1_mffem"]
[ext_resource type="Shader" path="res://Scenes/player.gdshader" id="2_w430x"]
[ext_resource type="PackedScene" uid="uid://cw5r03j38aq20" path="res://Scenes/tooltip.tscn" id="3_8hxl5"]
[ext_resource type="Texture2D" uid="uid://wgf0gai4f0dg" path="res://Assets/ICONOS/BURBUJA DIALOGO.png" id="4_2e2w2"]
[ext_resource type="Script" path="res://Scenes/burbujita.gd" id="5_4l5gc"]
[ext_resource type="AudioStream" uid="uid://comma70vu64bp" path="res://Assets/Sounds/click al personaje.wav" id="7_dd7h4"]
[ext_resource type="AudioStream" uid="uid://jv0q5n4or0st" path="res://Assets/Sounds/click rebote.wav" id="8_d7g12"]
[ext_resource type="Shader" path="res://Scenes/influencia.gdshader" id="9_byvk7"]
[ext_resource type="Texture2D" uid="uid://5nlryb2t6g0t" path="res://icon.svg" id="10_w0f8y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0b43v"]
resource_local_to_scene = true
shader = ExtResource("2_w430x")
shader_parameter/seleccionado = null
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ffpf3"]
atlas = ExtResource("1_mffem")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc3gj"]
atlas = ExtResource("1_mffem")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2mr5"]
atlas = ExtResource("1_mffem")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k21a1"]
atlas = ExtResource("1_mffem")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_udikq"]
atlas = ExtResource("1_mffem")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrb76"]
atlas = ExtResource("1_mffem")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr34o"]
atlas = ExtResource("1_mffem")
region = Rect2(17, 21, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ashn"]
atlas = ExtResource("1_mffem")
region = Rect2(65, 21, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_8juqg"]
atlas = ExtResource("1_mffem")
region = Rect2(113, 21, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmuec"]
atlas = ExtResource("1_mffem")
region = Rect2(161, 21, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeqf8"]
atlas = ExtResource("1_mffem")
region = Rect2(209, 21, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_lopit"]
atlas = ExtResource("1_mffem")
region = Rect2(257, 21, 16, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_j0xcs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffpf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc3gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2mr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k21a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udikq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrb76")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr34o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ashn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8juqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmuec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeqf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lopit")
}],
"loop": true,
"name": &"idle_small",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_53i68"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wadts"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y2ktx"]
radius = 49.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x81p1"]
resource_local_to_scene = true
shader = ExtResource("9_byvk7")
shader_parameter/ring_radius = 0.4
shader_parameter/thickness_scalar = 0.3
shader_parameter/oscillation_scalar = 0.05
shader_parameter/speed = 1.5
shader_parameter/main_color = Vector4(1, 1, 1, 1)
shader_parameter/lerp_color = Vector4(1, 1, 1, 1)
shader_parameter/active = false

[node name="NPC" type="CharacterBody2D" groups=["NPCs"]]
position = Vector2(80, 53)
script = ExtResource("1_a1xwy")
DEBUG = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_0b43v")
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_j0xcs")
animation = &"idle_small"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_53i68")

[node name="AreaTooltip" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTooltip"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_wadts")
debug_color = Color(1.58831e-06, 0.63803, 0.384223, 0.42)

[node name="Tooltip" parent="." instance=ExtResource("3_8hxl5")]
offset_left = -4.0
offset_top = -10.0
offset_right = 76.0
offset_bottom = 14.0
metadata/_edit_use_anchors_ = true

[node name="Influencia" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Influencia"]
visible = false
shape = SubResource("CircleShape2D_y2ktx")

[node name="Globito" type="Sprite2D" parent="."]
position = Vector2(5, -11)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_2e2w2")
script = ExtResource("5_4l5gc")

[node name="Label" type="Label" parent="."]
offset_left = -12.0
offset_top = 11.0
offset_right = 12.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 8

[node name="clickpersonaje" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dd7h4")
volume_db = 4.457

[node name="clickrebote" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_d7g12")
volume_db = 7.924

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="TargetPaseo" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="FocusCircle" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_x81p1")
texture = ExtResource("10_w0f8y")

[connection signal="input_event" from="AreaTooltip" to="." method="_on_area_tooltip_input_event"]
[connection signal="mouse_entered" from="AreaTooltip" to="." method="_on_area_tooltip_mouse_entered"]
[connection signal="mouse_exited" from="AreaTooltip" to="." method="_on_area_tooltip_mouse_exited"]
[connection signal="body_entered" from="Influencia" to="." method="_on_influencia_body_entered"]
[connection signal="body_exited" from="Influencia" to="." method="_on_influencia_body_exited"]
[connection signal="timeout" from="TargetPaseo" to="." method="_on_target_paseo_timeout"]
